# cann-recipes-harmony-infer

./: .pre-commit-config.yaml  CONTRIBUTION.md  DISCLAIMER.md  README.md  Third_Party_Open_Source_Software_Notice  install_deps.sh
.gitcode/ ISSUE_TEMPLATE/: bug-report.yml
.gitcode/ISSUE_TEMPLATE/: feature-request.yml  question.yml
docs/: Ascend C自定义算子开发指南.md  ascend_ops_guide.md  ascendc_develop_guide.md  atc_tools_guide.md  quick_install.md
docs/common/: ATC模型转换参考文档.md  环境准备.md
docs/common/ascendc/: Ascend C鸿蒙自定义算子开发指南.md
harmony_acl/: .gitignore  README.md  build.sh
harmony_acl/docs/: acl.md
harmony_acl/scripts/: CMakeLists.txt
harmony_acl/src/: acl_aipp.cpp  acl_data.cpp  acl_data.h  acl_manager.cpp  acl_manager.h  acl_mdl.cpp  ascend_string.cpp
harmony_acl/src/ndk/: dynamic_load_helper.cpp  dynamic_load_helper.h  hiai_ndk_aipp.cpp  hiai_ndk_aipp.h  hiai_ndk_executor.cpp  hiai_ndk_executor.h  hiai_ndk_nncore.cpp  hiai_ndk_nncore.h  hiai_ndk_options.cpp  hiai_ndk_options.h  hiai_ndk_tensor.cpp  hiai_ndk_tensor.h  ndk_proxy.cpp  ndk_proxy.h
harmony_acl/src/utils/: assert.h  ir_option.h  log.h  securestl.h  string_utils.h
harmony_acl/tests/ut/: aippParam_ut.cpp  compiler_ut.cpp  main.cpp
harmony_acl/tests/ut/ndk/: hiai_aipp_param.cpp  hiai_executor.cpp  hiai_helper.cpp  hiai_ndk_struct_def.h  hiai_options.cpp  hiai_tensor.cpp  neural_network_core.cpp
harmony_acl/tests/ut/ndk/include/hiai_foundation/: hiai_aipp_param.h  hiai_helper.h  hiai_options.h  hiai_single_op.h  hiai_tensor.h
harmony_acl/tests/ut/ndk/include/neural_network_runtime/: neural_network_core.h  neural_network_runtime_type.h
harmony_infer/: README.md  oh-package-lock.json5
harmony_infer/entry/src/main/cpp/: SobelCustom.cpp
harmony_infer/entry/src/main/ets/entryability/: EntryAbility.ets
harmony_infer/entry/src/main/ets/pages/: Index.ets
harmony_infer/harmony_os_next/: readme_cn.md  readme_en.md
harmony_infer/harmony_os_next/AppScope/resources/base/element/: string.json
harmony_infer/harmony_os_next/Soble/: build-profile.json5  readme_cn.md  readme_en.md
harmony_infer/harmony_os_next/Soble/AppScope/: app.json5
harmony_infer/harmony_os_next/Soble/entry/src/mock/: Libentry.mock.ets
harmony_infer/harmony_os_next/Soble/entry/src/test/: List.test.ets  LocalUnit.test.ets
harmony_infer/harmony_os_next/entry/: build-profile.json5
harmony_infer/oh_modules/.ohpm/: lock.json5
ops/AddKernelInvocation/: CMakeLists.txt  README.md  add_custom.cpp  main.cpp  run.sh
ops/AddKernelInvocation/cmake/Modules/: CMakeDetermineCCECompiler.cmake
ops/ascendc/: CMakeLists.txt
ops/ascendc/AddKernelInvocation/: README.md  add_custom.cpp  data_utils.h  main.cpp  run.sh
ops/ascendc/AddKernelInvocation/cmake/Modules/: CMakeDetermineCCECompiler.cmake
ops/ascendc/AddKernelInvocation/scripts/: gen_data.py  verify_result.py
ops/ascendc/cmake/: config.cmake  func.cmake  intf.cmake  intf_pub.cmake
ops/ascendc/cmake/scripts/: check_version_compatible.py
ops/ascendc/docs/: custom-npu_bandNorm.md  custom-npu_bandnorm.md  custom-npu_quantMatmul.md  custom-npu_rmsNorm.md  custom-npu_slice_gelu.md  custom-npu_sobel.md
ops/ascendc/src/: README.md  install.sh
ops/ascendc/src/add_custom/: CMakePresets.json
ops/ascendc/src/add_custom/framework/: CMakeLists.txt
ops/ascendc/src/add_custom/op_host/: add_custom.cpp  add_custom_tiling.h
ops/ascendc/src/add_custom/op_kernel/: add_custom.cpp
ops/ascendc/src/add_custom/test/: create_onnx.py  gen_data.py
ops/ascendc/src/bandNorm_custom/: CMakeLists.txt
ops/ascendc/src/bandNorm_custom/framework/onnx_plugin/: CMakeLists.txt  onnx_band_norm_music_plugin.cc
ops/ascendc/src/bandNorm_custom/op_host/: band_norm_music.cpp  band_norm_music_tiling.h
ops/ascendc/src/bandNorm_custom/op_kernel/: band_norm_music.cpp
ops/ascendc/src/bandNorm_custom/test/: create_onnx.py  gen_data.py
ops/ascendc/src/quant_matmul_custom/: CMakeLists.txt  CMakePresets.json  build.sh  build_and_install.sh  build_devices.sh  run.sh
ops/ascendc/src/quant_matmul_custom/cmake/: config.cmake  func.cmake
ops/ascendc/src/quant_matmul_custom/cmake/util/: __init__.py  ascendc_bin_param_build.py  ascendc_impl_build.py  ascendc_ops_config.py  ascendc_replay_build.py  code_channel_infer.py  const_var.py  insert_simplified_keys.py  kernel_entry.py  opdesc_parser.py  parse_ini_to_json.py  replay_codegen.py  tiling_data_def_build.py
ops/ascendc/src/quant_matmul_custom/framework/: CMakeLists.txt
ops/ascendc/src/quant_matmul_custom/framework/onnx_plugin/: quant_matmul_custom_plugin.cpp
ops/ascendc/src/quant_matmul_custom/op_host/: CMakeLists.txt  quant_matmul_custom.cpp  quant_matmul_custom_tiling.cpp  quant_matmul_custom_tiling.h
ops/ascendc/src/quant_matmul_custom/op_kernel/: CMakeLists.txt  quant_matmul_custom.cpp
ops/ascendc/src/quant_matmul_custom/scripts/: __config_site  kernel.sh
ops/ascendc/src/quant_matmul_custom/test/: create_onnx.py  gen_data.py
ops/ascendc/src/rmsNorm_custom/: CMakePresets.json  build.sh  build_and_install.sh
ops/ascendc/src/rmsNorm_custom/cmake/: config.cmake
ops/ascendc/src/rmsNorm_custom/op_host/: rms_norm_custom.cpp  rms_norm_custom_tiling.h
ops/ascendc/src/rmsNorm_custom/op_kernel/: rms_norm_custom.cpp
ops/ascendc/src/rmsNorm_custom/test/: create_model.py  create_onnx.py  gen_data.py
ops/ascendc/src/slice_gelu_custom/: CMakeLists.txt  CMakePresets.json  build.sh  slice_gelu_custom.json
ops/ascendc/src/slice_gelu_custom/op_host/: slice_gelu_mul.cpp  slice_gelu_mul_tiling.h
ops/ascendc/src/slice_gelu_custom/op_kernel/: CMakeLists.txt  slice_gelu_mul.cpp
ops/ascendc/src/slice_gelu_custom/test/: create_model.py  create_onnx.py  gen_data.py
ops/ascendc/src/sobel_custom/: build.sh  build_and_install.sh  run.sh
ops/ascendc/src/sobel_custom/cmake/: func.cmake
ops/ascendc/src/sobel_custom/op_host/: sobel_custom.cpp  sobel_custom_tiling.h
ops/ascendc/src/sobel_custom/op_kernel/: sobel_custom.cpp  sobel_custom_base.h
ops/ascendc/src/sobel_custom/test/: create_model.py  create_onnx.py  gen_data.py
(+25 files in other folders)
